[package]
name = "curve25519_dalek_c"
version = "0.1.0"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]

[dependencies.curve25519-dalek]
version = "0.19.0"
default-features = false
# This is compatible with older versions of Rust
features = ["std", "u32_backend"]

[lib]
crate-type = ["staticlib"]
