[package]
name = "nano-load-tester"
version = "0.1.0"

[dependencies]
clap = "2.29.2"
env_logger = "0.5.3"
error-chain = "0.11.0"
futures = "0.1.17"
hyper = "0.11.15"
rand = "0.4.2"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
time = "0.1.39"
tokio-core = "0.1.12"
tokio-process = "0.1.5"
