add_executable (core_test
	core_test_main.cc
	testutil.hpp
	active_transactions.cpp
	block.cpp
	block_store.cpp
	bootstrap.cpp
	confirmation_height.cpp
	confirmation_solicitor.cpp
	conflicts.cpp
	difficulty.cpp
	distributed_work.cpp
	entry.cpp
	epochs.cpp
	gap_cache.cpp
	ipc.cpp
	ledger.cpp
	locks.cpp
	logger.cpp
	message.cpp
	message_parser.cpp
	memory_pool.cpp
	network.cpp
	node.cpp
	node_telemetry.cpp
	processor_service.cpp
	peer_container.cpp
	signing.cpp
	socket.cpp
	toml.cpp
	timer.cpp
	uint256_union.cpp
	utility.cpp
	versioning.cpp
	wallet.cpp
	wallets.cpp
	websocket.cpp
	work_pool.cpp)

target_compile_definitions(core_test
		PRIVATE
			-DTAG_VERSION_STRING=${TAG_VERSION_STRING}
			-DGIT_COMMIT_HASH=${GIT_COMMIT_HASH}
			-DBOOST_PROCESS_SUPPORTED=${BOOST_PROCESS_SUPPORTED})
target_link_libraries (core_test node secure gtest libminiupnpc-static Boost::log_setup Boost::log Boost::boost)
